[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Slingshot.gd" type="Script" id=1]
[ext_resource path="res://assets/рогатка (2).png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.6103

[node name="Slingshot" type="Node2D" groups=["Slingshot"]]
scale = Vector2( 0.975665, 0.89194 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0571427, 0.0587183 )
texture = ExtResource( 2 )

[node name="LeftLine" type="Line2D" parent="."]
visible = false
position = Vector2( 10.2494, -38.1192 )
points = PoolVector2Array( 0, 0, -115.818, 1.12115 )
width = 5.0
joint_mode = 2

[node name="RightLine" type="Line2D" parent="."]
visible = false
position = Vector2( -35.873, 85.2075 )
scale = Vector2( 0.939592, 0.953656 )
points = PoolVector2Array( 13.09, -129.32, -90.5395, -129.32 )
width = 5.0

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( -27.6734, 85.2075 )
scale = Vector2( 0.939592, 0.953656 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0

[node name="TouchArea" type="Area2D" parent="."]
position = Vector2( 0, 1.12115 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( 1.02494, -22.423 )
shape = SubResource( 1 )

[node name="VegetablePos" type="Position2D" parent="."]
position = Vector2( 2.04988, -44.846 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 10.2494
margin_top = -44.846
margin_right = 23.2494
margin_bottom = -31.846

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -2.04988
margin_top = 69.5114
margin_right = 10.9501
margin_bottom = 82.5114
color = Color( 0.776471, 0.298039, 0.298039, 1 )

[node name="LeftPos" type="Position2D" parent="."]
position = Vector2( -1.02494, 70.6325 )

[node name="RightPos" type="Position2D" parent="."]
visible = false
position = Vector2( 11.2744, -43.7249 )

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
